--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -635,9 +635,9 @@ During the second cycle the same considerations lead to the continued positive r
 \section{Conclusions}
 We have examined the very peculiar and novel magnetoelectric switching behavior in GdMn$_2$O$_5$, a hallmark multiferroic system.
 Based on the incredible experimental observations performed by our collaborators in A. Pimenov's group, we have constructed a semi-classical spin model in an attempt to reproduce the behavior.
-Not only was this attempt very succesful in mimicking the experimental observations, it also allowed us to gain deeper insight into what causes the effect.
+Not only was this attempt very succesful in mimicking the experimental observations, it also allowed us to gain a deeper insight into what causes the effect.
 \\\\
-We identified three separate polarization switching regimes that occur for different values of the angle $\phi_H$ that the applied magnetic field makes with the $a$ axis of the crystal.
+We identified three separate polarization switching regimes that occur for different values of the angle $\phi_H$ that the applied magnetic field makes with the $a$-axis of the crystal.
 Accordingly, we termed these the low angle, high angle, and magic angle switching regimes, the latter fully deserving its designation due to the novel four state double hysteresis loop that it leads to.
 The magnetoelectric switching is fully deterministic in each regime, hinting at the energetics as the source for this behavior.
 Using a semi-classical effective spin Hamiltonian in terms of the Gd spins, and the AFM order parameters $\bm L_\alpha$ that describe the Mn chains, we were able to unravel the characteristics of the system.
@@ -650,12 +650,12 @@ We verified this by performing Nudged Elastic Band calculations that describe ho
 The main observation is that the barriers between neighboring states are not related by symmetry and are thus allowed to evolve asymmetrically, a fact confirmed by the different magnetizations of the barrier states.
 \\\\
 We then turned our attention to the behavior of the spins associated with the effective model. Incredibly, we found that the undirectional cycling of the four state regime is reflected in the full 360$^\circ$ rotation of half the spins by increments close to 90$^\circ$ (see Fig.~\ref{fig:GdMn2O5_regimes} for a summary of all switching regimes).
-This is a microscopic analogue to the crankshaft in a car, transforming linear back--and--forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
-Since the polarization in these materials is a direct result of the magnetic configuration, we managed to link the uncovered spin behavior directly to the observations of the magnetoelectric switching measurements.
+This is a microscopic analogue to the crankshaft in a car, transforming the linear back--and--forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
+Since the polarization in these materials is a direct result of the magnetic configuration, we managed to link the uncovered spin behavior directly to the observations of the magnetoelectric switching in the experimental measurements.
 \\\\
 Moreover, by realizing how the magic angle switching regime appears as a boundary between the low and high angle regimes, and by studying the difference in their trajectories through the energy landscape, we identified the topological nature of the switching behavior.
-We then defined a topological winding number to the spin rotations which is 0 for the two state switching regimes (low and high angle), and 1 for the four state switching regime.
-In order to verify the generality and robustness of this topological behavior, we performed simulations with varied model parameters, demonstrating its existence in a wide range of cases (see Fig.~\ref{fig:GdMn2O5_windingvsparam}).
+We then defined a topological winding number, associated with the spin rotations, which is 0 for the two state switching regimes (low and high angle), and 1 for the four state switching regime.
+In order to verify the generality and robustness of this topological behavior, we performed further simulations with varied model parameters, demonstrating the existence of the four state regime in a wide range of cases (see Fig.~\ref{fig:GdMn2O5_windingvsparam}).
 \\\\
 Combining all our observations, we concluded by attempting an intuitive explanation of the switching from a microscopic point of view, comparing the behavior of the spins in GdMn$_2$O$_5$ to the well-known spin-flop transition.
 While our investigation explained the lion's share of the observed magnetoelectric switching behavior in GdMn$_2$O$_5$, there remain some unanswered questions, mainly concerning the influence of domains, and what leads to the smaller jumps of the polarization curves in Fig.~\ref{fig:GdMn2O5_experiment1}.
@@ -664,5 +664,5 @@ We would like to conclude with some speculations on the technological applicabil
 First, the clearest similarity is with a binary counter, where GdMn$_2$O$_5$ could be a single crystal analogue where the two polarization states denote either a 0 or 1 bit.
 It could then be trivially used as a binary counter for magnetic field pulses.
 Second, the flatness of the energy surface close to the switching field could open the door to a degree of electric control over the magnetic configuration~\cite{Radaelli08Y,Oh14}.
-This could then be utilized in storage devices that store the data magnetically, but read and write it electrically.
-The main limiting factor is the exceedingly low temperature that is required to observe these effects (see Fig.~\ref{fig:GdMn2O5_experiment2}(c)).
+This may then be utilized in storage devices that store data magnetically, but read and write it electrically.
+The main limiting factor is the exceedingly low temperature that is required to observe these effects in GdMn$_2$O$_5$ (see Fig.~\ref{fig:GdMn2O5_experiment2}(c)).
