--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -203,8 +203,8 @@ Based on the experimental observations and a numerical simulation, we uncover th
 \Include{Introduction}
 
 % \Include{Rashba}
-\Include{GdMn2O5}
-% \Include{Cr}
+% \Include{GdMn2O5}
+\Include{Cr}
 
 % \Include{Softening}
 % \appendix
