--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -204,9 +204,9 @@ Based on the experimental observations and a numerical simulation, we uncover th
 
 % \Include{Rashba}
 % \Include{GdMn2O5}
-\Include{Cr}
+% \Include{Cr}
 
-% \Include{Softening}
+\Include{Softening}
 % \appendix
 % \Include{DFT}
 % \Include{Wannier}
